--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,7 @@ footer {
 	background: #62647d;
 	width: 1120px;
     margin: 0 auto;
+    box-shadow: black 0px 6px 16px
 }
 .interior .articol {
 	width: 500px;
@@ -169,6 +170,7 @@ footer {
     margin: 0 auto;
     height: 280px;
     background: #30313e;
+    box-shadow: black 0px 6px 16px
 }
 footer .joinus {
 	width: 1120px;
