--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header {
 #content {
 	width: 1120px;
 	margin:0 auto;
-	box-shadow: black 0px 6px 16px
+	box-shadow: #b1adad 0px 6px 20px
 }
 a {
 	text-decoration: none;
