--- a/css/style.css
+++ b/css/style.css
@@ -350,3 +350,83 @@ select option {
 #content section .img-l img, #content section .img-r img {
 	width: 420px;
 }
+section {
+	margin: 0 0 2rem 0;
+	padding: 2rem;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+	background: white;
+	border-radius: 10px;
+  }
+.modal {
+	position: fixed;
+	top: 5vh;
+	left: 18%;
+    width: 63%;
+	z-index: 99999;
+	background: white;
+	border-radius: 10px;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+	animation: float-in 0.3s ease-out forwards;
+	display: flex;
+	flex-direction: column;
+  }
+  .modal h2 {
+	padding: 0.5rem;
+	border-bottom: 1px solid #ccc;
+	color: #23242e;
+  }
+  
+  .modal p {
+	margin: 0;
+	padding: 0 1rem;
+  }
+  
+  .modal button {
+	align-self: flex-end;
+	margin: 0.5rem;
+		padding: 1rem;
+		color: #ff0055;
+		font: inherit;
+		border: none;
+		cursor: pointer;
+		background: transparent;
+	  
+  }
+  .modal .formular{
+	margin: 0px auto;
+  }
+  .modal .formular input {
+    width: 90%;
+    padding: 8px 5px;
+    margin: 4px 0;
+    background: #ededed;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.75);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+}
+.modal .formular .privacy input {
+	box-shadow: none;
+	left: 124px;
+
+}
+.modal .formular .privacy {
+    
+	margin: 25px 0 25px 100px;
+}
+  #backdrop {
+	position: fixed;
+	z-index: 1000;
+	width: 100%;
+	height: 100vh;
+	left: 0;
+	top: 0;
+	background: rgba(0, 0, 0, 0.75);
+	display: none;
+	pointer-events: none;
+  }
+  
+  #backdrop.visible {
+	display: block;
+	pointer-events: all;
+  }
